Removendo pessoa no banco de dados